<resources>
    <string name="app_name">The Canteen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">You are just one click away from appetizing dishes</string>
    <string name="start">Start Now</string>
    <string name="the_canteen">The Canteen</string>
    <string name="junkfood">Junk Food</string>
    <string name="view_cart">View Cart</string>
    <string name="place_order">Place Order</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="placed_order">Your Order Has Been Placed Successfully.</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="my_orders">Orders</string>
    <string name="add">Add</string>
    <string name="food_item">Food Item</string>
    <string name="price">Price</string>
    <string name="under_development">This feature is under development. Here, you will see your previous orders.</string>
    <string name="total">Total</string>
    <string name="fast_food">Fast Food</string>
    <string name="developer"><b>Made by Riya Kushwaha</b></string>
    <string name="beverages">Beverage</string>
    <string name="nofood">Nothing Selected :(</string>
    <string name="about_para">\nThis is a food ordering app. This app can be used by canteens of different institutions and offices to order their lunch by doing their work. The main purpose to save time of going to the canteen.
        \nIn this hypothetical canteen, there are two categories available. Clicking on the image will get you to the page of your
    choice menu. In the cart, you will see your final amount to be paid. \nThis application has been made by using
        <b><i>Recycler View, Data Binding, Fragments, Navigation, View Model, Room Database</i></b> concepts.\n In future, a central database can be added to store the ordered value, which will then be received by the chef of the canteen.
    Another database holding the previous orders of the specific user will also be added.</string>

</resources>